--- a/css/styles.scss
+++ b/css/styles.scss
@@ -120,9 +120,9 @@ a:hover {
      
  }
 
-// .card {
-//     border: none;
-// }
+ .card {
+     border: none;
+}
 
 // .star-divider {
 //     width: 100%;
@@ -195,13 +195,13 @@ a:hover {
 //     }
 // }
 
-// @media (min-width: 768px) { 
-//     #firefox  {
-//         margin-top: 3.5rem;
-//     }
+ @media (min-width: 768px) { 
+     #firefox  {
+         margin-top: 3.5rem;
+     }
 
-//     #opera {
-//         margin-top: 5rem;    
-//     }
-// }
+     #opera {
+         margin-top: 5rem;    
+     }
+ }
 
