--- a/css/styles.css
+++ b/css/styles.css
@@ -23619,6 +23619,62 @@ a:hover {
   border: none;
 }
 
+.star-divider {
+  width: 100%;
+  height: 20px;
+  background-image: url("../public/bg-dots.svg");
+  background-repeat: repeat-x;
+  background-position: center;
+}
+
+.accordion {
+  min-height: 100px;
+  max-width: 800px;
+  overflow: hidden;
+}
+.accordion .accordion-item {
+  padding: 0;
+  margin: 0;
+  border-left: 0;
+  border-right: 0;
+  border-top: none;
+  border-bottom: none;
+  overflow: hidden;
+}
+.accordion .accordion-item:focus-within, .accordion .accordion-item:active {
+  background: none;
+  border: 0;
+  outline: 0;
+}
+.accordion .accordion-button {
+  background-color: inherit;
+  color: #0d0f16;
+  font-weight: 600;
+  overflow: hidden;
+}
+.accordion .accordion-button[aria-expanded=true]::after {
+  color: #FA5959 !important;
+}
+.accordion .accordion-button[aria-expanded=false]::after {
+  color: #5265E1 !important;
+}
+.accordion .accordion-button::after {
+  color: blue !important;
+}
+.accordion .accordion-button:hover:not([aria-expanded=true]) {
+  color: #FA5959;
+}
+.accordion .accordion-button:focus {
+  outline: none;
+  box-shadow: none;
+}
+.accordion .accordion-body {
+  background-color: #ffffff;
+  color: #333;
+  overflow: hidden;
+  text-align: start;
+}
+
 @media (min-width: 768px) {
   #firefox {
     margin-top: 3.5rem;
