--- a/css/styles.scss
+++ b/css/styles.scss
@@ -124,76 +124,76 @@ a:hover {
      border: none;
 }
 
-// .star-divider {
-//     width: 100%;
-//     height: 20px;
-//     background-image: url('../public/bg-dots.svg');
-//     background-repeat: repeat-x;
-//     background-position: center;
-// }
+ .star-divider {
+     width: 100%;
+     height: 20px;
+     background-image: url('../public/bg-dots.svg');
+     background-repeat: repeat-x;
+     background-position: center;
+ }
 
-// .accordion {
+ .accordion {
 
-//     min-height: 100px;
-//     max-width: 800px;
+     min-height: 100px;
+     max-width: 800px;
     
-//     overflow: hidden;
+     overflow: hidden;
 
-//     .accordion-item {
-//         padding: 0;
-//         margin: 0;
-//         border-left: 0;
-//         border-right: 0;
-//         border-top: none;
-//         border-bottom: none;
+     .accordion-item {
+         padding: 0;
+         margin: 0;
+         border-left: 0;
+         border-right: 0;
+         border-top: none;
+         border-bottom: none;
 
-//         &:focus-within,
-//         &:active {
-//             background: none;
-//             border: 0;
-//             outline: 0;
-//         }
+         &:focus-within,
+         &:active {
+             background: none;
+             border: 0;
+             outline: 0;
+         }
 
-//         overflow: hidden;
-//     }
+         overflow: hidden;
+     }
 
-//     .accordion-button {
-//         background-color: inherit;
-//         color: #0d0f16;
-//         font-weight: 600;
-//         overflow: hidden;
+     .accordion-button {
+         background-color: inherit;
+         color: #0d0f16;
+         font-weight: 600;
+         overflow: hidden;
 
-//         &[aria-expanded="true"]::after {
-//             color: $secondary !important;
-//         }
+         &[aria-expanded="true"]::after {
+             color: $secondary !important;
+         }
 
-//         &[aria-expanded="false"]::after {
-//             color: $primary !important;
-//         }
+         &[aria-expanded="false"]::after {
+             color: $primary !important;
+         }
         
-//         &::after {
-//             color: blue !important;
-//         }
+         &::after {
+             color: blue !important;
+         }
 
-//         &:hover:not([aria-expanded="true"]) {
-//             color: $secondary;
-//         }
+         &:hover:not([aria-expanded="true"]) {
+             color: $secondary;
+         }
 
-//         &:focus {
-//             outline: none;
-//             box-shadow: none;
-//         }
+         &:focus {
+             outline: none;
+             box-shadow: none;
+         }
 
         
-//     }
+     }
 
-//     .accordion-body {
-//         background-color: #ffffff;
-//         color: #333;
-//         overflow: hidden;
-//         text-align: start;
-//     }
-// }
+     .accordion-body {
+         background-color: #ffffff;
+         color: #333;
+         overflow: hidden;
+         text-align: start;
+     }
+ }
 
  @media (min-width: 768px) { 
      #firefox  {
